iOSでカラーピッカーが出なかったのを修正

--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
                 <dl>
                     <dt>Vertex Color</dt>
                     <dd>
-                        <label id="button-vertex-color" for="vertex-color" style="background-color:#FFFFFF; color:#000;">#FFFFFF</label>
-                        <input value="#FFFFFF" style="background-color:#FFFFFF; color:#000;" id="vertex-color" class="none" type="color">
+                        <label
+                            id="button-vertex-color" for="vertex-color" style="background-color:#FFFFFF; color:#000;">#FFFFFF</label><input
+                            name="vertex-color" value="#FFFFFF" style="background-color:#FFFFFF; color:#000;" id="vertex-color" class="min" type="color">
                     </dd>
                     <dt>Vertex List</dt>
                     <dd>
@@ -108,8 +109,9 @@
                 <dl>
                     <dt>Vertex Color</dt>
                     <dd>
-                        <label id="button-vertex-color-surface" for="vertex-color-surface" style="background-color:#FFFFFF; color:#000;">#FFFFFF</label>
-                        <input value="#FFFFFF" style="background-color:#FFFFFF; color:#000;" id="vertex-color-surface" class="none" type="color">
+                        <label
+                            id="button-vertex-color-surface" for="vertex-color-surface" style="background-color:#FFFFFF; color:#000;">#FFFFFF</label><input
+                            name="vertex-color-surface" value="#FFFFFF" style="background-color:#FFFFFF; color:#000;" id="vertex-color-surface" class="min" type="color">
                     </dd>
                     <dt>Surface List</dt>
                     <dd>
@@ -125,8 +127,9 @@
                 <dl>
                     <dt>Texel Color</dt>
                     <dd>
-                        <label id="button-texel-color" for="texel-color" style="background-color:#FFFFFF; color:#000;">#FFFFFF</label>
-                        <input value="#FFFFFF" style="background-color:#FFFFFF; color:#000;" id="texel-color" class="none" type="color">
+                        <label
+                            id="button-texel-color" for="texel-color" style="background-color:#FFFFFF; color:#000;">#FFFFFF</label><input
+                            name="texel-color" value="#FFFFFF" style="background-color:#FFFFFF; color:#000;" id="texel-color" class="min" type="color">
                     </dd>
                 </dl>
             </div>
