iOSにはフルスクリーン表示の時にキーボードが出ないバグがあるらしく直せませんでした

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
-        <meta
-            name="viewport"
-            content="width=device-width,user-scalable=no">
+        <meta name="viewport" content="width=device-width,user-scalable=no">
+        <meta name="theme-color" content="#AAAAAA" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#555555" media="(prefers-color-scheme: dark)">
         <title>Space</title>
 	    <link href="./icon.png" rel="icon">
 	    <link href="./style.css" rel="stylesheet">
@@ -17,7 +17,7 @@
             <div id="version"></div>
 
             <div id="name-div">
-                <input id="name" value="" autocomplete="on" type="text">
+                <input id="name" value="" type="text">
             </div>
             <div id="save-div">
                 <input
@@ -133,6 +133,7 @@
                     </dd>
                 </dl>
             </div>
+            
             <div id="pose-3d-div" class="none">
             </div>
             <div id="pose-2d-div" class="none">
@@ -141,7 +142,7 @@
             <div id="strage-div" class="none">
                 <form id="strage-form" action="">
                     <input
-                        id="name-strage" value="" autocomplete="on" type="text"><input
+                        id="name-strage" value="" type="text"><input
                         value="Cancel" id="cancel-button" type="button"><input
                         value="Load" id="load-button" type="button"><input
                         value="Save" id="save-button" type="submit"><input
@@ -153,7 +154,7 @@
             <div id="file-div" class="none">
                 <form id="file-form" action="">
                     <input
-                        id="name-file" value="" autocomplete="on" type="text">
+                        id="name-file" value="" type="text">
                     <input
                         id="cancel-file" value="Cancel" type="button"><input
                         id="import" value="Import" type="button"><input
